--- a/vendir.lock.yml
+++ b/vendir.lock.yml
@@ -75,8 +75,8 @@ directories:
   path: build/postgres/_vendir
 - contents:
   - git:
-      commitTitle: Stop specifying UID/GID for quarks in Dockerfile...
-      sha: 5a31fccb204770d0cf851080389e6a25555f9e98
+      commitTitle: Add delete secret permission to cluster role (#20)
+      sha: 01d7be017c3cec812a056e364a47dc6ca1d27d90
     path: .
   path: build/quarks-secret/_vendir
 kind: LockConfig
