--- a/vendir.yml
+++ b/vendir.yml
@@ -111,6 +111,6 @@ directories:
   - path: .
     git:
       url: https://github.com/cloudfoundry-incubator/quarks-secret
-      ref: 5a31fccb204770d0cf851080389e6a25555f9e98 # version: TBD
+      ref: 01d7be017c3cec812a056e364a47dc6ca1d27d90 # version: 1.0.692
     includePaths:
     - deploy/helm/quarks-secret/**/*
