Refactor quarks-secret into its own component directory
[#173754832](https://www.pivotaltracker.com/story/show/173754832)

Signed-off-by: Paul Warren <pwarren@pivotal.io>
Co-authored-by: Dave Walter <dwalter@pivotal.io>

--- a/vendir.lock.yml
+++ b/vendir.lock.yml
@@ -57,6 +57,10 @@ directories:
     path: postgres
   path: config/postgres/_ytt_lib
 - contents:
+  - manual: {}
+    path: quarks-secret
+  path: config/quarks-secret/_ytt_lib
+- contents:
   - git:
       commitTitle: '[stable/minio] Support imagePullSecrets (#22812)...'
       sha: 921eb8a969fb9d7b7b7d13904f740c76748ec2c9
