--- a/config/networking/network-policies.yaml
+++ b/config/networking/network-policies.yaml
@@ -80,11 +80,17 @@ spec:
     - namespaceSelector:
         matchLabels:
           cf-for-k8s.cloudfoundry.org/istio-system-ns: ""
+    - namespaceSelector:
+        matchLabels:
+          cf-for-k8s.cloudfoundry.org/contour-system-ns: ""
   egress:
   - to:
     - namespaceSelector:
         matchLabels:
           cf-for-k8s.cloudfoundry.org/istio-system-ns: ""
+    - namespaceSelector:
+        matchLabels:
+          cf-for-k8s.cloudfoundry.org/contour-system-ns: ""
   policyTypes:
   - Ingress
   - Egress
@@ -102,11 +108,17 @@ spec:
     - namespaceSelector:
         matchLabels:
           cf-for-k8s.cloudfoundry.org/istio-system-ns: ""
+    - namespaceSelector:
+        matchLabels:
+          cf-for-k8s.cloudfoundry.org/contour-system-ns: ""
   egress:
   - to:
     - namespaceSelector:
         matchLabels:
           cf-for-k8s.cloudfoundry.org/istio-system-ns: ""
+    - namespaceSelector:
+        matchLabels:
+          cf-for-k8s.cloudfoundry.org/contour-system-ns: ""
   policyTypes:
   - Ingress
   - Egress
@@ -125,11 +137,17 @@ spec:
     - namespaceSelector:
         matchLabels:
           cf-for-k8s.cloudfoundry.org/istio-system-ns: ""
+    - namespaceSelector:
+        matchLabels:
+          cf-for-k8s.cloudfoundry.org/contour-system-ns: ""
   egress:
   - to:
     - namespaceSelector:
         matchLabels:
           cf-for-k8s.cloudfoundry.org/istio-system-ns: ""
+    - namespaceSelector:
+        matchLabels:
+          cf-for-k8s.cloudfoundry.org/contour-system-ns: ""
   policyTypes:
   - Ingress
   - Egress
@@ -265,6 +283,9 @@ spec:
       namespaceSelector:
         matchLabels:
           cf-for-k8s.cloudfoundry.org/istio-system-ns: ""
+    - namespaceSelector:
+        matchLabels:
+          cf-for-k8s.cloudfoundry.org/contour-system-ns: ""
     - podSelector:
         matchLabels:
           app: log-cache
@@ -306,6 +327,9 @@ spec:
       namespaceSelector:
         matchLabels:
           cf-for-k8s.cloudfoundry.org/istio-system-ns: ""
+    - namespaceSelector:
+        matchLabels:
+          cf-for-k8s.cloudfoundry.org/contour-system-ns: ""
     - podSelector:
         matchLabels:
           app.kubernetes.io/name: cf-api-controllers
@@ -469,6 +493,9 @@ spec:
       namespaceSelector:
         matchLabels:
           cf-for-k8s.cloudfoundry.org/istio-system-ns: ""
+    - namespaceSelector:
+        matchLabels:
+          cf-for-k8s.cloudfoundry.org/contour-system-ns: ""
     - podSelector:
         matchLabels:
           cloudfoundry.org/source_type: STG
@@ -652,6 +679,9 @@ spec:
       namespaceSelector:
         matchLabels:
           cf-for-k8s.cloudfoundry.org/istio-system-ns: ""
+    - namespaceSelector:
+        matchLabels:
+          cf-for-k8s.cloudfoundry.org/contour-system-ns: ""
     - podSelector:
         matchLabels:
           app: fluentd
@@ -740,5 +770,8 @@ spec:
       namespaceSelector:
         matchLabels:
           cf-for-k8s.cloudfoundry.org/istio-system-ns: ""
+    - namespaceSelector:
+        matchLabels:
+          cf-for-k8s.cloudfoundry.org/contour-system-ns: ""
   egress:
   - {}
