--- a/vendir.lock.yml
+++ b/vendir.lock.yml
@@ -8,8 +8,8 @@ directories:
   path: config/capi/_ytt_lib/capi-k8s-release
 - contents:
   - git:
-      commitTitle: 'ci: fix pr body...'
-      sha: 9f4dd3bc8ec146a2f0d66e3077d13cb2c0fdbda7
+      commitTitle: create httpproxies in routecontroller
+      sha: 6a9c18f793d82752e80359d7bf002dd379173eac
     path: .
   path: config/networking/_ytt_lib/cf-k8s-networking
 - contents:
