--- a/vendir.yml
+++ b/vendir.yml
@@ -17,7 +17,7 @@ directories:
   - path: .
     git:
       url: https://github.com/cloudfoundry/cf-k8s-networking
-      ref: 9f4dd3bc8ec146a2f0d66e3077d13cb2c0fdbda7
+      ref: xxx-mikes-contour-spike
     includePaths:
     - config/*
     - config/crd/**/*
