Get QuarksSecret running against develop
Co-authored-by: Andrew Wittrock <awittrock@pivotal.io>

--- a/config/networking/network-policies.yaml
+++ b/config/networking/network-policies.yaml
@@ -492,6 +492,23 @@ spec:
 kind: NetworkPolicy
 apiVersion: networking.k8s.io/v1
 metadata:
+  name: quarks
+  namespace: #@ system_namespace()
+spec:
+  policyTypes:
+  - Ingress
+  - Egress
+  podSelector:
+    matchLabels:
+      name: quarks-secret
+  ingress:
+  - {}
+  egress:
+  - {}
+---
+kind: NetworkPolicy
+apiVersion: networking.k8s.io/v1
+metadata:
   name: eirini
   namespace: #@ system_namespace()
 spec:
