--- a/config/system-namespace.yml
+++ b/config/system-namespace.yml
@@ -7,3 +7,4 @@ metadata:
   name: #@ system_namespace()
   labels:
     cf-for-k8s.cloudfoundry.org/cf-system-ns: ""
+    quarks.cloudfoundry.org/monitored: cf-quarks-secret
