--- a/config/capi/secrets/quarks-secrets.yml
+++ b/config/capi/secrets/quarks-secrets.yml
@@ -1,9 +1,31 @@
+#@ load("/namespaces.star", "system_namespace")
+
 ---
 apiVersion: quarks.cloudfoundry.org/v1alpha1
 kind: QuarksSecret
 metadata:
   name: cloud-controller-username-lookup-client-secret
-  namespace: cf-system
+  namespace: #@ system_namespace()
 spec:
   type: password
   secretName: cloud-controller-username-lookup-client-secret
+
+---
+apiVersion: quarks.cloudfoundry.org/v1alpha1
+kind: QuarksSecret
+metadata:
+  name: cf-api-controllers-client-secret
+  namespace: #@ system_namespace()
+spec:
+  type: password
+  secretName: cf-api-controllers-client-secret
+
+---
+apiVersion: quarks.cloudfoundry.org/v1alpha1
+kind: QuarksSecret
+metadata:
+  name: capi-database-encryption-key-secret
+  namespace: #@ system_namespace()
+spec:
+  type: password
+  secretName: capi-database-encryption-key-secret
