--- a/config/uaa/secrets/quarks-secrets.yml
+++ b/config/uaa/secrets/quarks-secrets.yml
@@ -1,22 +1,34 @@
----
+#@ load("@ytt:data", "data")
+#@ load("@ytt:yaml", "yaml")
+#@ load("/namespaces.star", "system_namespace")
+
+#@ def uaa_client_credential_template(client_name):
+oauth:
+  #@yaml/text-templated-strings
+  clients:
+    (@= client_name @):
+      secret: "{{.Values.client_credentials}}"
+#@ end
+
+#@ def uaa_client_credential(client_name, credential_reference):
 apiVersion: quarks.cloudfoundry.org/v1alpha1
 kind: QuarksSecret
 metadata:
-  name: templated-uaa-quarks-secret1
-  namespace: cf-system
+  name: #@ "uaa-templated-" + credential_reference
+  namespace: #@ system_namespace()
 spec:
   type: templatedconfig
-  secretName: uaa-cloud-controller-username-lookup-client-secret
+  secretName: #@ "uaa-" + credential_reference
   request:
     templatedConfig:
       type: helm
       templates:
-        client_credentials.yml: |
-          oauth:
-            clients:
-              cloud_controller_username_lookup:
-                secret: "{{.Values.client_credentials}}"
+        client_credentials.yml: #@ yaml.encode(uaa_client_credential_template(client_name))
       values:
         client_credentials:
-          name: "cloud-controller-username-lookup-client-secret"
+          name: #@ credential_reference
           key: "password"
+#@ end
+
+--- #@ uaa_client_credential("cloud_controller_username_lookup", "cloud-controller-username-lookup-client-secret")
+--- #@ uaa_client_credential("cf_api_controllers", "cf-api-controllers-client-secret")
