Move uaa-admin-client-secret to quarks
- todo: inline the overlay and remove the hardcoded uaa value

Co-authored-by: Dave Walter <walterda@vmware.com>

--- a/config/uaa/secrets/quarks-secrets.yml
+++ b/config/uaa/secrets/quarks-secrets.yml
@@ -30,5 +30,16 @@ spec:
           key: "password"
 #@ end
 
+---
+apiVersion: quarks.cloudfoundry.org/v1alpha1
+kind: QuarksSecret
+metadata:
+  name: uaa-admin-client-credentials
+  namespace: #@ system_namespace()
+spec:
+  type: password
+  secretName: uaa-admin-client-credentials
+
 --- #@ uaa_client_credential("cloud_controller_username_lookup", "cloud-controller-username-lookup-client-secret")
 --- #@ uaa_client_credential("cf_api_controllers", "cf-api-controllers-client-secret")
+--- #@ uaa_client_credential("admin", "uaa-admin-client-credentials")
