Make ingress solution configurable
- Introduce new value called `ingress_solution_provider` which allows
operator to choose which ingress provider (i.e. Contour or Istio) they
would like to use.
- Move config/istio to config/ingress/_ytt_lib/istio
- Add ytt tests for ingress_solution_provider value
- Istio resources such as `PeerAuthentication` and `AuthorizationPolicy` now
live in the istio library and are only created if
`ingress_solution_provider` is set to Istio
- Refactor NetworkPolicy to have Istio pods selector in one place

- PS: we needed to add minio_enabled config option as a value passed into the
library. It felt better than leaving the peerauth stuff out of the
library and wrapped in an if statement.

[#175134357](https://www.pivotaltracker.com/story/show/175134357)
Co-authored-by: Kauana dos Santos <kdossantos@vmware.com>
Co-authored-by: Clay Kauzlaric <ckauzlaric@vmware.com>
Co-authored-by: Alex Standke <astandke@vmware.com>

--- a/config/ingress.lib.yml
+++ b/config/ingress.lib.yml
@@ -1,4 +1,5 @@
 #@ load("/namespaces.star", "system_namespace")
+#@ load("@ytt:data", "data")
 
 #@ def ingress(name, hostnames, service, port, namespace=system_namespace(), tlsSecretName="cf-system-cert"):
 apiVersion: networking.k8s.io/v1beta1
@@ -7,7 +8,7 @@ metadata:
   name: #@ name
   namespace: #@ namespace
   annotations:
-    kubernetes.io/ingress.class: istio #! configure this from cf-values
+    kubernetes.io/ingress.class: #@ data.values.networking.ingress_solution_provider
 spec:
   rules:
   #@ for host in hostnames:
