--- a/config/ingress/_ytt_lib/istio/overlays/ingressgateway-service-nodeport.lib.yaml
+++ b/config/ingress/_ytt_lib/istio/overlays/ingressgateway-service-nodeport.lib.yaml
@@ -1,7 +1,7 @@
 #@ load("@ytt:data", "data")
 #@ load("@ytt:overlay", "overlay")
 
-#@ if data.values.load_balancer.enable == False:
+#@ def ingressgateway_service_nodeport():
 #@overlay/match by=overlay.subset({"kind":"Service","metadata":{"name":"istio-ingressgateway"}})
 ---
 spec:
