--- a/config/ingress/_ytt_lib/istio/overlays/istio-kapp-ordering.lib.yaml
+++ b/config/ingress/_ytt_lib/istio/overlays/istio-kapp-ordering.lib.yaml
@@ -1,5 +1,6 @@
 #@ load("@ytt:overlay", "overlay")
 
+#@ def istio_kapp_ordering():
 #@ kind_deployment = overlay.subset({"kind":"Deployment"})
 #@ kind_replica_set = overlay.subset({"kind":"ReplicaSet"})
 #@ kind_stateful_set = overlay.subset({"kind":"StatefulSet"})
@@ -28,3 +29,4 @@ metadata:
   annotations:
     #@overlay/match missing_ok=True
     kapp.k14s.io/change-group: cf-for-k8s.cloudfoundry.org/istio-sidecar-injector
+#@ end
