--- a/config/ingress/_ytt_lib/istio/templates/peer-auth-fluentd.yaml
+++ b/config/ingress/_ytt_lib/istio/templates/peer-auth-fluentd.yaml
@@ -1,11 +1,10 @@
-#@ load("/namespaces.star", "system_namespace")
-
+#@ load("@ytt:data", "data")
 ---
 apiVersion: security.istio.io/v1beta1
 kind: PeerAuthentication
 metadata:
   name: fluentd-allow-plaintext
-  namespace: #@ system_namespace()
+  namespace: #@ data.values.system_namespace
 spec:
   selector:
     matchLabels:
