--- a/sample-cf-install-values.yml
+++ b/sample-cf-install-values.yml
@@ -20,7 +20,7 @@ blobstore:
 
 #! Ingress solution can be "istio" or "contour"
 networking:
-  ingress_solution_provider: contour
+  ingress_solution_provider: istio
 
 #! The admin password for operators to access the database.
 cf_db:
