Expose extra S3 config for resource pool's blobstore
- Requires that the user values file used to install cf adds a
`#@overlay/match-child-defaults missing_ok=True` annotation on their
`blobstore.fog_aws_storage_options` key when they want to supply this
additional config

Authored-by: Jaskanwal Pawar <jpawar@pivotal.io>

--- a/config/capi/capi.yml
+++ b/config/capi/capi.yml
@@ -33,6 +33,9 @@ blobstore:
   buildpack_directory_key: #@ data.values.blobstore.buildpack_directory_key
   aws_signature_version: #@ data.values.blobstore.aws_signature_version
 
+  #@overlay/match-child-defaults missing_ok=True
+  fog_aws_storage_options: #@ data.values.blobstore.fog_aws_storage_options
+
 cc:
   log_level: #@ data.values.capi.log_level
 
