--- a/config/values/00-values.yml
+++ b/config/values/00-values.yml
@@ -89,6 +89,7 @@ blobstore:
   resource_directory_key: "cc-resources"
   buildpack_directory_key: "cc-buildpacks"
   aws_signature_version: "2"
+  fog_aws_storage_options: {}
 
 #! optional configuration if using a private registry that has all cf-for-k8s images relocated to
 #! see <docs/platform_operators/system-registry.md>
