--- a/config/networking/_ytt_lib/cf-k8s-networking/config/routecontroller/cluster-role.yaml
+++ b/config/networking/_ytt_lib/cf-k8s-networking/config/routecontroller/cluster-role.yaml
@@ -14,9 +14,15 @@ rules:
 - apiGroups: ["networking.cloudfoundry.org"]
   resources: ["routes", "routes/status"]
   verbs: ["create", "delete", "get", "update", "list", "watch"]
+#@ if data.values.routecontroller.ingressSolutionProvider == "istio":
 - apiGroups: ["networking.istio.io"]
   resources: ["virtualservices"]
   verbs: ["create", "delete", "get", "update", "list", "watch"]
+#@ elif data.values.routecontroller.ingressSolutionProvider == "contour":
+- apiGroups: ["projectcontour.io"]
+  resources: ["httpproxies"]
+  verbs: ["create", "delete", "get", "update", "list", "watch"]
+#@ end
 - apiGroups: [""]
   resources: ["services"]
   verbs: ["create", "delete", "get", "update", "list", "watch"]
