--- a/config/networking/_ytt_lib/cf-k8s-networking/config/routecontroller/routecontroller.yaml
+++ b/config/networking/_ytt_lib/cf-k8s-networking/config/routecontroller/routecontroller.yaml
@@ -32,7 +32,8 @@ spec:
       containers:
       - name: routecontroller
         image: #@ data.values.routecontroller.image
-        args: ["--enable-leader-election=true"]
+        args:
+          - --enable-leader-election=true
         resources:
           limits:
             cpu: 100m
