--- a/config/networking/networking.yml
+++ b/config/networking/networking.yml
@@ -1,3 +1,4 @@
+#@ load("@ytt:data", "data")
 #@ load("@ytt:library", "library")
 #@ load("@ytt:template", "template")
 #@ load("/namespaces.star", "system_namespace", "workloads_namespace")
@@ -5,6 +6,8 @@
 #@ def networking_values():
 systemNamespace: #@ system_namespace()
 workloadsNamespace: #@ workloads_namespace()
+routecontroller:
+  ingressSolutionProvider: #@ data.values.networking.ingress_solution_provider
 #@ end
 
 #@ networking = library.get("cf-k8s-networking")
